Improved slider functionality, implemented swipe detect function, header changes onscroll to be more visible, fixed media queries bug.

--- a/src/assets/scss/shared.scss
+++ b/src/assets/scss/shared.scss
@@ -12,6 +12,9 @@ html {
 	font-size: $font-size--main;
 
 	@include media-desktop {
+		font-size: 16px;
+	}
+	@include media-desktop-sm {
 		font-size: 15px;
 	}
 	@include media-tablet {
@@ -21,7 +24,7 @@ html {
 		font-size: 13px;
 	}
 	@include media-phone-sm {
-		font-size: 12px;
+		font-size: 13px;
 	}
 }
 
