--- a/src/pug/includes/about/about.scss
+++ b/src/pug/includes/about/about.scss
@@ -13,6 +13,7 @@
 		@include media-phone {
 			grid-template: {
 				columns: 1fr;
+				rows: 1fr 1fr 1fr;
 			};
 		}
 		grid-template: {
@@ -30,6 +31,10 @@
 		@include media-desktop-sm {
 			grid-column: span 2;
 			order: 2;
+		}
+		@include media-phone {
+			grid-column: auto;
+			order: initial;
 		}
 
 		.caption__header {
@@ -51,5 +56,10 @@
 				left: rem(50px);
 			};
 		}
+	}
+
+
+	&__img {
+		user-select: none;
 	}
 }
